Fixed pixel overlap on a lower resolution display

--- a/src/opendlv-signal-viewer/src/style.css
+++ b/src/opendlv-signal-viewer/src/style.css
@@ -58,7 +58,7 @@ body {
     grid-column-end: line2;
     grid-row-start: row1-end;
     grid-row-end: third-line;
-    margin-left: 100px;
+    margin-left: 50px;
 
 }
 #meterLeft{
